added working letter guess function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
   </div>
 
+  <h2>Guesses Remaining:</h2>
+  <div id="guesses-div"></div>
+
     <script src="assets/javascript/game.js" async defer></script>
   </body>
 </html>
