--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Welcome to Hangman!</h1>
 
-    <h2>Pick a letter.</h2>
+    <h2 id="text-changer">Pick a letter.</h2>
 
     <div id="letters">
 
