fixed restart functions, added backgorund image and some styling

--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
   </head>
   <body>
 
-    <h1>Welcome to Hangman!</h1>
+    <h1>Welcome to Pizza Hangman!</h1>
 
-    <h2 id="text-changer">Pick a letter.</h2>
+    <h2 id="text-changer">Press any key to begin.</h2>
 
     <div id="letters">
 
-    <div id="spot1" class="spots">_</div>
-    <div id="spot2" class="spots">_</div>
-    <div id="spot3" class="spots">_</div>
-    <div id="spot4" class="spots">_</div>
-    <div id="spot5" class="spots">_</div>
-    <div id="spot6" class="spots">_</div>
-    <div id="spot7" class="spots">_</div>
-    <div id="spot8" class="spots">_</div>
-    <div id="spot9" class="spots">_</div>
+    <div id="spot1" class="spots"></div>
+    <div id="spot2" class="spots"></div>
+    <div id="spot3" class="spots"></div>
+    <div id="spot4" class="spots"></div>
+    <div id="spot5" class="spots"></div>
+    <div id="spot6" class="spots"></div>
+    <div id="spot7" class="spots"></div>
+    <div id="spot8" class="spots"></div>
+    <div id="spot9" class="spots"></div>
 
   </div>
 
   <h2>Guesses Remaining:</h2>
   <div id="guesses-div"></div>
+  <h2>Letter already guessed:</h2>
+  <div id="letters-guessed-div"></div>
 
-    <script src="assets/javascript/game.js" async defer></script>
+    <script src="assets/javascript/game2.js" async defer></script>
   </body>
 </html>
